# web-scraper

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
requirements/: dev.in  dev.txt  prod.in  prod.txt  test.in  test.txt
src/: scrapetest.py
src/dynamic/: __init__.py  scrapy_example.py
src/static/: __init__.py  link_scraper.py  static_web_scraping.py
tutorial/: quotes-1.html  quotes-2.html
tutorial/tutorial/: middlewares.py  pipelines.py
