[project]
name = "web-scraper"
version = "0.0.1"
description = "Web scraper for data engineering pipeline"
readme = "README.md"
requires-python = ">=3.12"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
show_error_codes = true

[tool.ruff]
# Never enforce `E501` (line length violations).
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "D",  # for docstring check
]
ignore = [
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "D102",
    "D101",
    "D100"
]
line-length=92
target-version="py311"
include = ["*.py"]

[tool.ruff.extend-per-file-ignores]
# Also ignore `E402` in all `__init__.py` files.
"__init__.py" = ["D104"]

[tool.ruff.pydocstyle]
convention="google"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/ -ra
--cov-report xml:coverage.xml
"""

python_files=[
    "test_*.py",
]
testpaths = [
    "tests",
]
pythonpath = [
    "src",
]

[tool.coverage.report]
exclude_also = [
    "def main",
    "if __name__ == .__main__.:"
    ]